[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Menu/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://Scripts/DeathScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Pixellari.ttf" type="DynamicFontData" id=4]

[sub_resource type="Environment" id=8]
background_mode = 4
glow_enabled = true
glow_intensity = 0.88
glow_strength = 1.1
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="DeathScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 1.4, 1.4, 1.4, 1 )
self_modulate = Color( 0, 0.827451, 0.827451, 1 )
margin_left = 41.0
margin_top = 34.0
margin_right = 92.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Score:
21321312"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
modulate = Color( 1.4, 1.4, 1.4, 1 )
self_modulate = Color( 0, 0.827451, 0.827451, 1 )
margin_left = 41.0
margin_top = 65.0
margin_right = 101.0
margin_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "HighScore:
21321312"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
margin_left = 40.0
margin_top = 119.0
margin_right = 96.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
margin_left = 39.0
margin_top = 139.0
margin_right = 95.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
